Project configuration
Fixed paths + Documentation